12/19 갤러리페이지완성 및 사진 및 폰트 수정

--- a/community.html
+++ b/community.html
@@ -20,7 +20,9 @@
 
     <div class="inner">
       <!-- 웹페이지 메뉴 -->
-      <div class="hd_logo"><img src="img/logo.png" alt="헤더로고"></div>
+      <h1>
+        <a href="index.html">SMK</a>
+      </h1>
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="index.html">HOME</a></li>
@@ -39,10 +41,11 @@
 
       <nav class="menuMo">
         <h1>
-          <a href="#">Interior</a>
-          <span>INTERIOR INSTUTUTE</span>
+          <a href="index.html">SMK</a>
+          <span>INTERIOR DESIGN STUDIO</span>
         </h1>
         <ul id="gnbMo">
+          <li><a href="index.html">HOME</a></li>
           <li><a href="department.html">DEPARTMENT</a></li>
           <li><a href="join.html">JOIN</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
@@ -183,17 +186,16 @@
 
   <footer id="footer_sub">
     <div class="inner">
-      <h1><img src="img/logo.png" alt="푸터로고"></h1>
+      <h1>SMK</h1>
       <ul>
-        <li><a href="#">POLICY</a></li>
-        <li><a href="#">TERMS</a></li>
-        <li><a href="#">CUSTOMMER</a></li>
-        <li><a href="#">CONTACT US</a></li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
       <address>
-        address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
-        TEL : +82-032-333-4444 FAX : +82-032-333-4434
+        Address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
+        <br>TEL : +82-032-333-4444 FAX : +82-032-333-4434
       </address>
       <p>Copyright &copy; 2022 SMK ALL Right reserved</p>
     </div>
