--- a/department.html
+++ b/department.html
@@ -11,6 +11,7 @@
   <script defer src="js/btnCall.js"></script>
   <script defer src="js/anime.js"></script>
   <script defer src="js/counter.js"></script>
+  <script defer src="js/join.js"></script>
   <!-- <script defer src="js/Tab.js/"></script> -->
 </head>
 
@@ -21,7 +22,9 @@
 
     <div class="inner">
       <!-- 웹페이지 메뉴 -->
-      <div class="hd_logo"><img src="img/logo.png" alt="헤더로고"></div>
+      <h1>
+        <a href="index.html">SMK</a>
+      </h1>
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="index.html">HOME</a></li>
@@ -40,10 +43,11 @@
 
       <nav class="menuMo">
         <h1>
-          <a href="#">Interior</a>
-          <span>INTERIOR INSTITUTE</span>
+          <a href="index.html">SMK</a>
+          <span>INTERIOR DESIGN STUDIO</span>
         </h1>
         <ul id="gnbMo">
+          <li><a href="index.html">HOME</a></li>
           <li><a href="department.html">DEPARTMENT</a></li>
           <li><a href="join.html">JOIN</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
@@ -62,7 +66,8 @@
       <h2>OUR COMPANY</h2>
       <ul class="list">
         <li>
-          <div><img src="img/projectconstruction-916776.png" alt="프로젝트달성"></div>
+          <div><img src="img/department/회사창립.png" alt="창립년도"></div>
+
           <span> <b class="list_1">300</b>년</span>
 
           <p>창립년도</p>
@@ -70,32 +75,31 @@
         </li>
 
         <li>
-          <div><img src="img/projectconstruction-916776.png" alt="매출액달성"></div>
+          <div><img src="img/department/매출액.png" alt="매출액달성"></div>
           <span> <b class="list_2">1</b>명</span>
 
           <p>직원 수</p>
 
         </li>
         <li>
-          <div><img src="img/projectconstruction-916776.png" alt="연간성장률"></div>
+          <div><img src="img/department/성장률.png" alt="연간성장률"></div>
           <span> <b class="list_3">300</b>%</span>
 
           <p>연간 성장률</p>
         </li>
         <li>
-          <div><img src="img/projectconstruction-916776.png" alt="특허등록"></div>
+          <div><img src="img/department/특허등록.png" alt="특허등록"></div>
           <span> <b class="list_4">1</b>개</span>
 
           <p>특허 등록</p>
         </li>
         <li>
-          <div><img src="img/projectconstruction-916776.png" alt="창립년도"></div>
+          <div><img src="img/department/프로젝트달성.png" alt="프로젝트달성"></div>
           <span> <b class="list_5">300</b>개</span>
-
           <p>프로젝트달성</p>
         </li>
         <li>
-          <div><img src="img/projectconstruction-916776.png" alt="직원수"></div>
+          <div><img src="img/department/직원수.png" alt="직원수"></div>
           <span> <b class="list_6">300</b>억</span>
 
           <p>매출액 달성</p>
@@ -157,17 +161,16 @@
 
   <footer id="footer_sub">
     <div class="inner">
-      <h1><img src="img/logo.png" alt="푸터로고"></h1>
+      <h1>SMK</h1>
       <ul>
-        <li><a href="#">POLICY</a></li>
-        <li><a href="#">TERMS</a></li>
-        <li><a href="#">CUSTOMER</a></li>
-        <li><a href="#">CONTACT US</a></li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
       <address>
-        address : Lorem ipsum dolor sit
-        TEL : +82-032-333-4444 FAX : +82-032-333-4434
+        Address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
+        <br>TEL : +82-032-333-4444 FAX : +82-032-333-4434
       </address>
       <p>Copyright &copy; 2022 SMK ALL Right reserved</p>
     </div>
