--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     <div class="inner">
       <!-- 웹페이지 메뉴 -->
-      <div class="hd_logo"><img src="img/logo.png" alt="헤더로고"></div>
+      <h1>
+        <a href="index.html">SMK</a>
+      </h1>
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="index.html">HOME</a></li>
@@ -45,10 +47,11 @@
 
       <nav class="menuMo">
         <h1>
-          <a href="#">Interior</a>
-          <span>INTERIOR INSTUTUTE</span>
+          <a href="index.html">SMK</a>
+          <span>INTERIOR DESIGN STUDIO</span>
         </h1>
         <ul id="gnbMo">
+          <li><a href="index.html">HOME</a></li>
           <li><a href="department.html">DEPARTMENT</a></li>
           <li><a href="join.html">JOIN</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
@@ -75,10 +78,10 @@
 
     <div class="Slide_btn">
       <a href="#" class="prev">
-        <strong>prev</strong>
+        <strong>PREV</strong>
       </a>
       <a href="#" class="next">
-        <strong>next</strong>
+        <strong>NEXT</strong>
       </a>
     </div>
 
@@ -94,11 +97,11 @@
           architectolor sit amet consectetur, adipisicing
           architectolor sit amet consectetur, adipisicing elit. Perferendis quisquam fugit maiores, sed architecto
           sequi officia iusto expedita cum </p>
-        <a href="#">MORE</a>
+        <a href="department.html">MORE</a>
       </div>
       <div class="QiuckJoin">
         <form action="index.html">
-          <h1>Ask for Information</h1>
+          <h1>ASK FOR INFORMATION</h1>
           <fieldset>
             <legend class="hidden">빠른 상담 신청</legend>
             <table>
@@ -171,7 +174,7 @@
       <section>
         <article class="on">
           <div class="pic">
-            <img src="img/거실.png" alt="거실인테리어사진">
+            <img src="img/index_services/index_services1.jpg" alt="거실인테리어사진">
           </div>
           <div class="wrap">
             <h2>Living-room</h2>
@@ -190,7 +193,7 @@
 
         <article>
           <div class="pic">
-            <img src="img/주방.jpg" alt="주방인테리어사진">
+            <img src="img/index_services/index_services2.jpg " alt=주방인테리어사진">
           </div>
 
           <div class="wrap">
@@ -211,7 +214,7 @@
 
         <article>
           <div class="pic">
-            <img src="img/침실.jpg" alt="침실인테리어사진">
+            <img src="img/index_services/index_services3.jpg " alt="침실인테리어사진">
           </div>
           <div class="wrap">
             <h2>Bed-Room</h2>
@@ -229,7 +232,7 @@
 
         <article>
           <div class="pic">
-            <img src="img/아이방.jpg" alt="아이방인테리어사진">
+            <img src="img/index_services/index_services4.jpg " alt="아이방인테리어사진">
           </div>
           <div class="wrap">
             <h2>Nursery-Room</h2>
@@ -247,7 +250,7 @@
 
         <article>
           <div class="pic">
-            <img src="img/욕실.jpg" alt="욕실인테리어사진">
+            <img src="img/index_services/index_services5.jpg " alt="욕실인테리어사진">
           </div>
           <div class="wrap">
             <h2>Bathroom</h2>
@@ -267,7 +270,7 @@
 
         <article>
           <div class="pic">
-            <img src="img/현관.jpg" alt="현관인테리어사진">
+            <img src="img/index_services/index_services6.jpg " alt="현관인테리어사진">
           </div>
           <div class="wrap">
             <h2>Front door</h2>
@@ -291,20 +294,20 @@
       <h1>LATEST PROJECTS</h1>
       <div class="wrap">
         <article>
-          <img src="img/Home - BDS Contract.jpg" alt="">
-          <a href="#">VIEW MORE</a>
+          <img src="img/index_LatestProjects/Home - BDS Contract.jpg" alt="">
+          <a href="gallery.html">VIEW MORE</a>
         </article>
         <article>
-          <img src="img/office interior design.png" alt="">
-          <a href="#">VIEW MORE</a>
+          <img src="img/index_LatestProjects/office interior design.png" alt="">
+          <a href="gallery.html">VIEW MORE</a>
         </article>
         <article>
-          <img src="img/ofiso baldai.jpg" alt="">
-          <a href="#">VIEW MORE</a>
+          <img src="img/index_LatestProjects/ofiso baldai.jpg" alt="">
+          <a href="gallery.html">VIEW MORE</a>
 
         </article>
         <article>
-          <img src="img/플랜디자인.jpg" alt="">
+          <img src="img/index_LatestProjects/플랜디자인.jpg" alt="">
           <a href="#">VIEW MORE</a>
 
         </article>
@@ -316,17 +319,16 @@
 
   <footer id="footer">
     <div class="inner">
-      <h1><img src="img/logo.png" alt="푸터로고"></h1>
+      <h1>SMK</h1>
       <ul>
-        <li><a href="#">POLICY</a></li>
-        <li><a href="#">TERMS</a></li>
-        <li><a href="#">CUSTOMMER</a></li>
-        <li><a href="#">CONTACT US</a></li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
       <address>
-        address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
-        TEL : +82-032-333-4444 FAX : +82-032-333-4434
+        Address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
+        <br>TEL : +82-032-333-4444 FAX : +82-032-333-4434
       </address>
       <p>Copyright &copy; 2022 SMK ALL Right reserved</p>
     </div>
