--- a/join.html
+++ b/join.html
@@ -20,7 +20,9 @@
 
     <div class="inner">
       <!-- 웹페이지 메뉴 -->
-      <div class="hd_logo"><img src="img/logo.png" alt="헤더로고"></div>
+      <h1>
+        <a href="index.html">SMK</a>
+      </h1>
       <nav class="menuWeb">
         <ul id="gnb">
           <li><a href="index.html">HOME</a></li>
@@ -39,10 +41,11 @@
 
       <nav class="menuMo">
         <h1>
-          <a href="#">Interior</a>
-          <span>INTERIOR INSTUTUTE</span>
+          <a href="index.html">SMK</a>
+          <span>INTERIOR DESIGN STUDIO</span>
         </h1>
         <ul id="gnbMo">
+          <li><a href="index.html">HOME</a></li>
           <li><a href="department.html">DEPARTMENT</a></li>
           <li><a href="join.html">JOIN</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
@@ -83,34 +86,34 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
                 <!-- userid   -->
                 <tr>
 
-                  <th scope="row"><label for="userid">User ID</label></th>
+                  <th scope="row"><label for="userid">USER ID</label></th>
                   <td>
                     <input type="text" name="userid" id="userid" placeholder="아이디를 입력하세요.">
                   </td>
                 </tr>
                 <!-- password -->
                 <tr>
-                  <th scope="row"><label for="pwd1">Password</label></th>
+                  <th scope="row"><label for="pwd1">PASSWORD</label></th>
                   <td>
                     <input type="password" name="pwd1" id="pwd1" placeholder="비밀번호를 입력하세요.">
                   </td>
                 </tr>
                 <tr>
-                  <th scope="row"><label for="pwd2">Re Password</label></th>
+                  <th scope="row"><label for="pwd2">RE-PASSWORD</label></th>
                   <td>
                     <input type="password" name="pwd2" id="pwd2" placeholder="비밀번호를 재입력하세요.">
                   </td>
                 </tr>
                 <!-- email -->
                 <tr>
-                  <th scope="row"><label for="email">E-mail</label></th>
+                  <th scope="row"><label for="email">E-MAIL</label></th>
                   <td>
                     <input type="text" name="email" id="email" placeholder="이메일주소를 입력하세요.">
                   </td>
                 </tr>
                 <!-- education -->
                 <tr>
-                  <th scope="row"><label for="edu">Education</label></th>
+                  <th scope="row"><label for="edu">EDUCATION</label></th>
                   <td>
                     <select name="edu" id="edu">
                       <option value="">선택하세요</option>
@@ -123,28 +126,28 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
                 </tr>
                 <!-- gender -->
                 <tr>
-                  <th scope="row">Gender</th>
+                  <th scope="row">GENDER</th>
                   <td>
-                    <label for="male">Male</label>
+                    <label for="male">MALE</label>
                     <input type="radio" name="gender" id="male" value="male">
-                    <label for="female">Female</label>
+                    <label for="female">FEMALE</label>
                     <input type="radio" name="gender" id="female" value="female">
                   </td>
                 </tr>
                 <!-- interest -->
                 <tr>
-                  <th scope="row">Interests</th>
+                  <th scope="row">INTERESTS</th>
                   <td>
-                    <label for="sports">Sports</label>
+                    <label for="sports">SPORTS</label>
                     <input type="checkbox" name="hobby" id="sports" value="sports">
 
-                    <label for="music">Music</label>
+                    <label for="music">MUSIC</label>
                     <input type="checkbox" name="hobby" id="music" value="music">
 
-                    <label for="game">Game</label>
+                    <label for="game">GAME</label>
                     <input type="checkbox" name="hobby" id="game" value="game">
 
-                    <label for="reading">Reading</label>
+                    <label for="reading">READING</label>
                     <input type="checkbox" name="hobby" id="reading" value="reading">
                   </td>
                 </tr>
@@ -160,8 +163,8 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
                 <tr>
                   <th colspan="2">
 
-                    <input type="reset" value="cancel">
-                    <input type="submit" value="submit">
+                    <input type="RESET" value="CANCEL">
+                    <input type="SUBMIT" value="SUBMIT ">
                   </th>
                 </tr>
               </tbody>
@@ -180,17 +183,16 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
 
   <footer id="footer_sub">
     <div class="inner">
-      <h1><img src="img/logo.png" alt="푸터로고"></h1>
+      <h1>SMK</h1>
       <ul>
-        <li><a href="#">POLICY</a></li>
-        <li><a href="#">TERMS</a></li>
-        <li><a href="#">CUSTOMMER</a></li>
-        <li><a href="#">CONTACT US</a></li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
       <address>
-        address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
-        TEL : +82-032-333-4444 FAX : +82-032-333-4434
+        Address : Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, nesciunt!
+        <br>TEL : +82-032-333-4444 FAX : +82-032-333-4434
       </address>
       <p>Copyright &copy; 2022 SMK ALL Right reserved</p>
     </div>
