12/19 반응형 1차완료

--- a/location.html
+++ b/location.html
@@ -102,6 +102,10 @@
         </label>
         <div class="content">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi eum maxime dolorum tempora fugit eaque
+            totam ratione ri eum maxime dolorum tempora fugit eaque
+            totam ratione perferendis harum dolores ea quibusdam id,perferendis harum dolores ea quibusdam id,ri eum
+            maxime dolorum tempora fugit eaque
+            totam ratione perferendis harum dolores ea quibusdam id,ri eum maxime dolorum tempora fugit eaque
             totam ratione perferendis harum dolores ea quibusdam id, .</p>
         </div>
       </div>
@@ -122,17 +126,6 @@
             Aperiam earum molestiae deleniti perferendis aut excepturi praesentium, ducimus eligendi, eveniet ad in
             soluta
             fuga nobis cum nulla laborum.</p>
-        </div>
-      </div>
-
-      <div class="tab">
-        <input type="radio" name="acc" id="acc4">
-        <label for="acc4">
-          <h2>04</h2>
-          <h3>How do I apply?</h3>
-        </label>
-        <div class="content">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit..</p>
         </div>
       </div>
     </div>
