--- a/youtube.html
+++ b/youtube.html
@@ -61,7 +61,7 @@
 
   <section class="content youtube">
     <div class="inner">
-      <h1>VIDEO PORTFOLIO <span>리모델링 시공사례</span></h1>
+      <h1>PORTFOLIO <span>리모델링 시공사례</span></h1>
       <div class="vidList">
 
         <article>
