12/20 result서브페이지 작업완료

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a href="department.html">MORE</a>
       </div>
       <div class="QiuckJoin">
-        <form action="index.html">
+        <form action="result.html" method="get" id="form">
           <h1>ASK FOR INFORMATION</h1>
           <fieldset>
             <legend class="hidden">빠른 상담 신청</legend>
