--- a/result.html
+++ b/result.html
@@ -56,15 +56,33 @@
     </div>
   </header>
 
-  <section class="content">
+  <section class="content result">
     <div class="inner">
-      <h1>Sub Title <span>서브페이지 제목</span></h1>
-      <!-- 컨텐츠가 들어가는 부분 -->
+      <h1 class="hidden">WELCOME <span>회원가입을 축하합니다!</span></h1>
+      <div class="wrap">
+        <article>
+          <img src="img/result/다운로드 (1).jpg" alt="회원가입축하이미지">
+        </article>
+        <div class="txt">
+          <h2>회원 가입을 축하합니다!</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero soluta, inventore delectus veniam rerum
+            voluptatem ipsam cum impedit at exercitationem recusandae aspernatur voluptatibus! Voluptas id perspiciatis
+            corrupti laboriosam. Ad, cupiditate.</p>
+          <a href="#">VIEW MORE</a>
+        </div>
+      </div>
     </div>
-
   </section>
 
+  <!-- <section class="result">
+    <h1>WELCOME <span>회원가입을 축하합니다!</span></h1>
+    <div class="wrap">
+      <article>
+        <img src="img/result/DEUX VILLE _ livingaxis.jpg" alt="회원가입축하이미지">
+      </article>
+    </div>
 
+  </section> -->
 
 
   <footer id="footer_sub">
