12/20 메인페이지 액션폼 js 완료

--- a/join.html
+++ b/join.html
@@ -65,7 +65,7 @@
       <div class="wrap">
         <form action="result.html" method="get" id="member">
           <fieldset>
-            <legend class="h">회원가입 폼 입력 양식 </legend>
+            <legend class="hidden">회원가입 폼 입력 양식 </legend>
 
             <h2><label for="terms">MEMBER AGREEMENT</label></h2>
             <textarea name="terms" id="terms" cols="30" rows="10">
@@ -80,7 +80,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
 
             <h2>MEMBER INFORMATION</h2>
             <table>
-              <caption class="h">회원가입을 위한 아이디, 비밀번호, 이메일,성별,학력,취미, 남기는 말 입력 테이블</caption>
+              <caption class="hidden">회원가입을 위한 아이디, 비밀번호, 이메일,성별,학력,취미, 남기는 말 입력 테이블</caption>
               <tbody>
                 <!-- userid   -->
                 <tr>
