--- a/index.html
+++ b/index.html
@@ -107,13 +107,17 @@
             <legend class="hidden">빠른 상담 신청</legend>
             <table>
               <caption class="hidden">정보 입력양식 테이블</caption>
+
+              <!-- 이름 -->
               <tr>
                 <th scope="row"><label for="name">NAME</label></th>
                 <td>
-                  <input type="text" id="name" required placeholder="이름을 입력해 주세요">
+                  <!-- <input type="text" id="name" required placeholder="이름을 입력해 주세요"> -->
+                  <input type="text" name="name" id="name">
+
                 </td>
               </tr>
-
+              <!-- 번호 -->
               <tr>
                 <th scope="row"><label for="tell">PhoneNumber</label></th>
                 <td>
@@ -127,7 +131,7 @@
                   <input type="tel" name="tell" id="tellEnd">
                 </td>
               </tr>
-
+              <!-- 이메일 -->
               <tr>
                 <th scope="row"><label for="email">E-MAIL</label></th>
                 <td>
@@ -145,6 +149,7 @@
                 <th colspan="2">
                   <input type="checkbox" name="agree" id="agree">
                   <label for="agree">약관에 동의합니다</label>
+
                   <input type="submit" value="SUBMIT">
                 </th>
               </tr>
