12/20 메인페이지 액션폼 js 최종완료

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a href="department.html">MORE</a>
       </div>
       <div class="QiuckJoin">
-        <form action="result.html" method="get" id="form">
+        <form action="result2.html" method="get" id="form">
           <h1>ASK FOR INFORMATION</h1>
           <fieldset>
             <legend class="hidden">빠른 상담 신청</legend>
@@ -121,9 +121,10 @@
               <tr>
                 <th scope="row"><label for="tell">PhoneNumber</label></th>
                 <td>
-                  <select name="tell" id="tell">
+                  <select name="tell1" id="tell">
                     <option value="010">010</option>
                     <option value="070">070</option>
+                    <option value="032">032</option>
                   </select>
                   <span class="inputSpan">-</span>
                   <input type="tel" name="tell" id="tellMiddle">
