12/21 메인페이지 액션폼 폰넘버 고침

--- a/result.html
+++ b/result.html
@@ -68,7 +68,7 @@
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero soluta, inventore delectus veniam rerum
             voluptatem ipsam cum impedit at exercitationem recusandae aspernatur voluptatibus! Voluptas id perspiciatis
             corrupti laboriosam. Ad, cupiditate.</p>
-          <a href="#">VIEW MORE</a>
+          <a href="index.html">VIEW MORE</a>
         </div>
       </div>
     </div>
