12/22 서비스 부분 바꿈 ( li 부분 & 클래스명 바꿈)

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   </figure>
 
-  <!-- 짧은 액션폼부여 -->
+  <!-- 짧은 액션폼 -->
   <section id="information" class="action">
     <div class="inner">
       <div class="wrap">
@@ -112,7 +112,6 @@
               <tr>
                 <th scope="row"><label for="name">NAME</label></th>
                 <td>
-                  <!-- <input type="text" id="name" required placeholder="이름을 입력해 주세요"> -->
                   <input type="text" name="name" id="name">
 
                 </td>
@@ -140,11 +139,6 @@
 
                 </td>
               </tr>
-              <!-- 
-              <div class="agreement">
-                <input type="checkbox" name="agree" id="agree">
-                <label for="agree">약관에 동의합니다</label>
-              </div> -->
 
               <tr>
                 <th colspan="2">
@@ -166,8 +160,8 @@
     <div class="innerH1">
       <h1>OUR SERVICES</h1>
     </div>
-    <main>
-      <div class="inner">
+    <div class="inner">
+      <div class="wrapUl">
         <ul>
           <li class="on"><a href="#">Living-room</a></li>
           <li><a href="#">Kitchen</a></li>
@@ -178,12 +172,12 @@
         </ul>
       </div>
 
-      <section>
+      <div class="wrapArc">
         <article class="on">
           <div class="pic">
             <img src="img/index_services/index_services1.jpg" alt="거실인테리어사진">
           </div>
-          <div class="wrap">
+          <div class="txt">
             <h2>Living-room</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -203,7 +197,7 @@
             <img src="img/index_services/index_services2.jpg " alt=주방인테리어사진">
           </div>
 
-          <div class="wrap">
+          <div class="txt">
             <h2>Kitchen</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -223,7 +217,7 @@
           <div class="pic">
             <img src="img/index_services/index_services3.jpg " alt="침실인테리어사진">
           </div>
-          <div class="wrap">
+          <div class="txt">
             <h2>Bed-Room</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -241,7 +235,7 @@
           <div class="pic">
             <img src="img/index_services/index_services4.jpg " alt="아이방인테리어사진">
           </div>
-          <div class="wrap">
+          <div class="txt">
             <h2>Nursery-Room</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -259,7 +253,7 @@
           <div class="pic">
             <img src="img/index_services/index_services5.jpg " alt="욕실인테리어사진">
           </div>
-          <div class="wrap">
+          <div class="txt">
             <h2>Bathroom</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus atatibus at
@@ -278,8 +272,10 @@
         <article>
           <div class="pic">
             <img src="img/index_services/index_services6.jpg " alt="현관인테리어사진">
+
           </div>
-          <div class="wrap">
+
+          <div class="txt">
             <h2>Front door</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at ducimus
@@ -287,11 +283,10 @@
               ipsaLorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis vitae necessitatibus at
             </p>
             <a href="#"> VIEW MORE</a>
-
           </div>
         </article>
-      </section>
-    </main>
+      </div>
+    </div>
   </section>
 
 
