--- a/join.html
+++ b/join.html
@@ -71,7 +71,7 @@
             <textarea name="terms" id="terms" cols="30" rows="10">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis liberoLorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dictt a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio velit a id aperiam modi quae, dolores error deleniti quis nesciunt nam, quisquam dicta nostrum odio. Exercitationem debitis quis libero!
               </textarea>
-
+            <!-- agreement   -->
             <div class="agreement">
               <input type="checkbox" name="agree" id="agree">
 
@@ -84,7 +84,6 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
               <tbody>
                 <!-- userid   -->
                 <tr>
-
                   <th scope="row"><label for="userid">USER ID</label></th>
                   <td>
                     <input type="text" name="userid" id="userid" placeholder="아이디를 입력하세요.">
@@ -97,6 +96,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore distinctio ve
                     <input type="password" name="pwd1" id="pwd1" placeholder="비밀번호를 입력하세요.">
                   </td>
                 </tr>
+                <!-- re-password -->
                 <tr>
                   <th scope="row"><label for="pwd2">RE-PASSWORD</label></th>
                   <td>
